--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -1,3 +1,33 @@
-.dodo {
-  color: red;
+.mainBg{
+  background-color: var(--extra-dark-gray);
+  display:flex;
+  flex-direction: column;
+  height: auto;
+}
+.router{
+  display: flex;
+  margin-top:10px;
+  margin-left:20px;
+}
+.tab{
+  font-size: var(--tabTag-font-size);
+  color:var(--lightest-green);
+  font-weight: 900;
+  border: 1px solid var(--lightest-green);
+  border-radius: 10px 10px 0 0;
+  background-color:var(--dark-gray);
+  padding:8px 32px;
+  text-decoration: none;
+}
+.tab:last-of-type{
+  margin-left: 5px;
+}
+.tab:active{
+  /* we have a problem here */
+  color:var(--dark-gray);
+  background-color: var(--medium-green);
+}
+.tab:hover{
+  color:var(--lightest-green);
+  background-color: var(--extra-dark-gray);
 }
