--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 h1{
     font-size: var(--question-font-size);
@@ -9,19 +10,21 @@ h1{
     text-align: center;
 }
 .search-bar{
-    position: relative;
-    display: flex;
-    justify-content: center;
-}
-input{
     width:90%;
     height: var(--searchBar-height);
     background-color: var(--lightest-green);
-    padding-left: 50px;
+    padding-left: 20px;
     border-radius: 20px;
     border:none;
+    display: flex;
+   align-items: center;
+}
+input{
     font-size: var(--searchWord-font-size);
     color:var(--dark-gray);
+    background-color: transparent;
+    border: none;
+    width:50%;
 }
 input::placeholder{
     color: var(--dark-gray);
@@ -29,7 +32,5 @@ input::placeholder{
 }
 #searchIcon{
     width: 30px;
-    position: absolute;
-    left:40px;
-    /* idk here yet */
+    margin-right: 10px;
 }
