--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -6,8 +6,17 @@
 }
 .router{
   display: flex;
-  margin-top:10px;
+  margin-top:20px;
   margin-left:20px;
+}
+.tabBg{
+  background-color: var(--dark-gray);
+  border:1px solid var(--lightest-green);
+  margin:0px 20px 0;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .tabInactive,
 .tabActive{
