--- a/src/components/DisplayResults/DisplayResults.css
+++ b/src/components/DisplayResults/DisplayResults.css
@@ -35,6 +35,9 @@ ul#flickr-grid-container img {
 /* tweets have been searched */
 
 #twitter-grid-container{
+  list-style: none;
+  margin: 20px 0 0 0 ;
+  padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-auto-rows: 1fr;
